Snaphot: one attempt to resolve dependencies