@@ -1,3 +1,22 @@
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one
+  ~ or more contributor license agreements.  See the NOTICE file
+  ~ distributed with this work for additional information
+  ~ regarding copyright ownership.  The ASF licenses this file
+  ~ to you under the Apache License, Version 2.0 (the
+  ~ "License"); you may not use this file except in compliance
+  ~ with the License.  You may obtain a copy of the License at
+  ~
+  ~   http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
+  -->
+
 # gRPC Query Extension for Druid
 
 This extension provides a gRPC API for SQL queries.
@@ -57,7 +76,7 @@ is possible to use a pre-defined Protobuf message to represent the results of ea
 query. (Protobuf is a compiled format: the solution works only because the set of messages
 are well known. It would not work for the ad-hoc case in which each query has a different
 result set schema.)
-
+---
 To be very clear: the application has a fixed set of queries to be sent to Druid via gRPC.
 For each query, there is a fixed Protobuf response format defined by the application.
 No other queries, aside from this well-known set, will be sent to the gRPC endpoint using
@@ -66,9 +85,36 @@ or JSON response format instead.
 
 ## Installation
 
+The gRPC query extension is a "contrib" extension and is not installed by default when
+you install Druid. Instead, you must install it manually.
+
+In development, you can build Druid with all the "contrib" extensions. When building
+Druid, include the `-P bundle-contrib-exts` in place of the `-P dist` option.
+
+In production, follow the [Druid documentation](https://druid.apache.org/docs/latest/development/extensions.html).
+Use the `pull-deps` command to install the `org.apache.druid.extensions.contrib:grpc-query`
+extension.
+
+To enable the extension, add the following to the load list in
+`_commmon/common.runtime.properties`:
+
+```text
+druid.extensions.loadList=[..., "grpc-query"]
+```
+
+Adding the extension to the load list automatically enables the extension.
+
+Then, enable and configure the extension in `broker/runtime.properties`:
+
+```text
+druid.grpcQuery.port=50051
+```
+
+The default port is 50051 (preliminary).
+
 ## Usage
 
-See the `src/main/proto/query.proto` file in the `grpc-shade` project for the request and
+See the `src/main/proto/query.proto` file in the `grpc-shaded` project for the request and
 response message formats. The request message format closely follows the REST JSON message
 format. The response is optimized for gRPC: it contains an error (if the request fails),
 or the result schema and result data as a binary payload. You can query the gRPC endpoint
@@ -92,6 +138,38 @@ This project contains several components:
 * A "driver" that performs the actual query and generates the results.
 
 ## Debugging
+
+Debugging of the gRPC extension requires extra care.
+
+### Debugging in an IDE
+
+To debug the gRPC extension in a production-like environment, you'll want to debug the
+extension in a running Broker. The easiest way to do this is:
+
+* Build your branch. Use the `-P bundle-contrib-exts` flag in place of `-P dist`, as described
+  above.
+* Create an install from the distribution produced above.
+* Use the `single-server/micro-quickstart` config for debugging.
+* Configure the installation using the steps above.
+* Modify the Supervisor config for your config to comment out the line that launches
+  the broker. Use the hash (`#`) character to comment out the line.
+* In your IDE, define a launch configuration for the Broker.
+  * The launch command is `server broker`
+  * Add the following JVM arguments:
+  
+```text
+--add-exports java.base/jdk.internal.perf=ALL-UNNAMED
+--add-exports jdk.management/com.sun.management.internal=ALL-UNNAMED
+```
+
+  * Define `grpc-query` as a project dependency. (This is for Eclipse; IntelliJ may differ.)
+  * Configure the class path to include the common and Broker properties files.
+  * Explicitly add the `extension/grpc-query/druid-shaded-grpc-<version>-SNAPSHOT.jar` in
+    the class path.
+* Launch the micro-quickstart cluster.
+* Launch the Broker in your IDE.
+
+### gRPC Logging
 
 Debugging of the gRPC stack is difficult since the shaded jar loses source attachments.
 
